# shipper

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: document_parser.py  pdf_generator.py  report_generator.py  validation_engine.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProgressIndicator.tsx  UploadZone.tsx  ValidationResult.tsx  index.ts
frontend/src/pages/: ReportPage.tsx  ResultsPage.tsx  UploadPage.tsx  index.ts
frontend/src/services/: api.ts  index.ts
